LOG of the CHANGES in the package gMWT

Version 1.1.x:
1: Fixed cran errors concerning that class vectors cannot be assumed to be of length 1

Version 1.1:
* Added the asymptotical test option for the triple test

Version 1.0:
* Switched from C to R RNG
* Stable release version
* Added package reference paper

Version 0.9.1:
* Changed maintainer email address

Version 0.9:
* Fixed a problem with the mwAkw option in gmw in case that kw reports NA p-values
* Pre-stable release version.

Version 0.3:
* Extended 'createGroups' to accept also characters as input
* Added classical multiple testings corrections to the function 'getSigTests'
* Adjusted the functions 'print.re', 'summary.re' and 'plot.re' for the new output of 'getSigTest'
* Updated the Manual
* Added the print.gmw method
* Option 'keepPM' added to gmw, used for the Westfall & Young multiple testing correction
* The csub call reports now relative values instead of absolute one.
* fixed the issue that the 2-sided p-values might get larger than 1 in case of MW
* Added the option 'mwAkw' to the function 'gmw'
* Several small bugfixes and improved error handlers

Version 0.2.1:
* Fixed graphical problems (surrounding box) in estPlotSingle, estPlotPair, estPlotTriple
* Added a zero line to the distance rejectionPlot

Version 0.2:
* Added the RcppArmadillo and Rcpp dependencies
* Added the C++ submatrix approach (Csubmat)
* Algorithm optimization for the Rsubmat approach

Version 0.1:
* Initial version, submission to cran