@@ -2,6 +2,7 @@ LOG of the CHANGES in the package gMWT
 
 Version 1.1.x:
 1: Fixed cran errors concerning that class vectors cannot be assumed to be of length 1
+2: Set in wilcox.test option exact=FALSE to avoid warnings
 
 Version 1.1:
 * Added the asymptotical test option for the triple test
